--- a/mpv.conf
+++ b/mpv.conf
@@ -1,6 +1,6 @@
 # MPV - mpv.conf
 # This config is optimized for AMD RX 9070 XT GPU and Ryzen 9 9950X3D CPU and various other all-AMD hardware on Arch Linux with uosc
-# Last updated: 04-23-2025
+# Version: 1.2
 
 # Created by - KAORU-VII
 # Social Media: https://kimurasocial.com
@@ -23,19 +23,24 @@ include="~~/profiles.conf"
 
 vo=gpu-next
 gpu-api=vulkan
+#hwdec=vulkan # Best for latest versions of mpv. If fails, swap to vaapi
+hwdec=vaapi
 gpu-context=waylandvk
-hwdec=vaapi # enable best HW decoder; turn off for software decoding
+#vo=dmabuf-wayland
 profile=gpu-hq
+hwdec-codecs=all
 
 # Vulkan optimizations for RDNA 4
 vulkan-async-compute=yes
 vulkan-async-transfer=yes
 vulkan-queue-count=8
+#vulkan-present-mode=fifo # For use with hwdec=vulkan
+#vulkan-present-mode="fifo" # use this if normal fifo fails. Use with hwdec=vulkan
 spirv-compiler=auto
-swapchain-depth=4
+swapchain-depth=8
 vd-lavc-dr=yes
-vd-lavc-threads=16 # Match Ryzen 9 9950X3D cores
-hwdec-codecs=all
+vd-lavc-threads=0 # Match Ryzen 9 9950X3D cores or your cpu. 0 = auto
+#vd-lavc-film-grain=gpu # GPU-accelerated grain for HDR
 
 # Wayland tweaks
 wayland-app-id=mpv
@@ -85,7 +90,15 @@ hr-seek-framedrop=no
 # Colorspace #
 ##############
 
-# OLD SETTINGS
+# ALL AUTO
+
+target-prim=auto
+target-trc=auto
+hdr-compute-peak=auto
+vf=format=colorlevels=auto:colormatrix=auto
+video-output-levels=auto
+
+# Colorspace Testing
 
 #target-prim=auto
 #target-prim=bt.709 # target Rec.709 for SDR TVs
@@ -93,15 +106,6 @@ hr-seek-framedrop=no
 #target-trc=auto
 #vf=format=colorlevels=full:colormatrix=auto
 #video-output-levels=auto
-
-# ALL AUTO
-
-target-prim=auto
-target-trc=auto
-vf=format=colorlevels=auto:colormatrix=auto
-video-output-levels=auto
-
-# Testing settings here
 
 # Set BT.709 as the target color primaries for SDR displays
 #target-prim=bt.709
@@ -121,36 +125,54 @@ video-output-levels=auto
 
 deband=yes # enabled by default
 deband-iterations=4 # deband steps
-deband-threshold=35 # deband strength
+deband-threshold=4 # deband strength
 deband-range=16 # deband range
-deband-grain=5 # dynamic grain: set to "0" if using the static grain shader
+deband-grain=2 # dynamic grain: set to "0" if using the static grain shader
 
 dither-depth=auto
 temporal-dither=yes
-dither=fruit
+dither=error-diffusion
+error-diffusion=sierra-lite  # Finer pattern; test with dark scenes OPTIONAL
 
 
 #########################
 # Motion Interpolation  #
 #########################
 
+# Video synchronization
 #video-sync=display-resample
+#display-fps-override=240  # Adjust to your monitor's refresh rate (e.g., 60, 120, 144, 165)
+
+# Interpolation settings
 #interpolation=yes
-#tscale=oversample # smoothmotion
+#tscale=sphinx # More demanding than oversample
+#tscale=oversample # Less demanding than sphinx
+#tscale-radius=1.0
+#tscale-clamp=0.0
+#tscale-blur=0.6991
+#interpolation-threshold=0.01  # Disables interpolation for high-frame-rate content (>60fps)
 
 # Adition options
-#display-fps-override=60
 #video-sync=display-fps
 #video-sync=strict
+
+#########################
+# Additional Settings   #
+#########################
+
+# Additional scaling settings for high quality playback
+scale=ewa_lanczossharp
+dscale=ewa_lanczossharp
+cscale=ewa_lanczossharp
 
 
 ################
 # Anti-Ringing #
 ################
 
-scale-antiring=0.6 # luma upscale deringing using libplacebo
-#dscale-antiring=0.7 # luma downscale deringing; currently does nothing with vo=gpu-next
-#cscale-antiring=0.7 # chroma upscale deringing; currently does nothing with vo=gpu-next
+scale-antiring=0.7 # luma upscale deringing using libplacebo
+dscale-antiring=0.7 # luma downscale deringing; maybe currently does nothing with vo=gpu-next
+cscale-antiring=0.7 # chroma upscale deringing; maybe currently does nothing with vo=gpu-next
 
 
 #############################################################
@@ -171,6 +193,12 @@ scale-antiring=0.6 # luma upscale deringing using libplacebo
 #######################
 
 ao=pipewire
+volume-max=150
+#audio-sync=yes
+audio-channels=auto
+audio-file-auto=fuzzy
+audio-pitch-correction=yes
+audio-normalize-downmix=yes
 
 slang=en,eng,English
 alang=ja,jp,jpn,jap,Japanese,en,eng,English
@@ -184,24 +212,18 @@ sub-font=Clear Sans Bold
 sub-back-color='#00000000'
 sub-outline-color='#266a678c'
 sub-shadow-color='#00000000'
-
 sub-auto=all
-volume-max=150
 sub-fix-timing=yes
 blend-subtitles=yes
 sub-ass-override=yes
 sub-file-paths-append=subtitles
 demuxer-mkv-subtitle-preroll=yes
 sub-file-paths=sub;subs;subtitles
-#audio-sync=yes
-#audio-channels=auto
-#audio-file-auto=fuzzy
-#audio-pitch-correction=yes
-#audio-normalize-downmix=yes
-#af=lavfi=[dynaudnorm=g=3:f=250:r=0.9:p=0.9:m=10]
+
 
 ## Audio Filters to Test ##
 
+#af=lavfi=[dynaudnorm=g=3:f=250:r=0.9:p=0.9:m=10]
 #lavfi=[loudnorm=i=-10]
 #lavfi=[loudnorm=i=-20]
 #af=speechnorm=e=4:p=0.4
