--- a/mpv.conf
+++ b/mpv.conf
@@ -1,14 +1,12 @@
 # MPV - mpv.conf
 # This config is optimized for AMD RX 9070 XT GPU and Ryzen 9 9950X3D CPU and various other all-AMD hardware on Arch Linux with uosc
-# Version: 1.2
+# Version: 1.3
 
 # Created by - KAORU-VII
 # Social Media: https://kimurasocial.com
 
 # This config file assumes that you are using a version of MPV that supports Conditional Profiles (i.e. auto-profiles.lau is no longer required). Tested on a Mac Studio with mpv v0.38.0_2, FFmpeg 7.0.1, and MoltenVK v1.2.9 on MacOS Sonoma 14.5.
 
-
-# Notes - If playback is sped up disable display-fps-override=60 by putting a # infront of it. Example: #display-fps-override=60
 
 ############
 # Profiles #
@@ -17,34 +15,55 @@
 include="~~/profiles.conf"
 
 
-###########
-# General #
-###########
+############
+# Hardware #
+############
 
 vo=gpu-next
 gpu-api=vulkan
-#hwdec=vulkan # Best for latest versions of mpv. If fails, swap to vaapi
-hwdec=vaapi
-gpu-context=waylandvk
-#vo=dmabuf-wayland
+
+#hwdec=vulkan # Best for quality and performance, least compatible
+#hwdec=vaapi # More compatible than vulkan but slightly lower quality
+hwdec=vaapi-copy # Most compatible with older GPUs, lowest quality
+
+
 profile=gpu-hq
 hwdec-codecs=all
 
+
+##########
+# Vulkan #
+##########
+
 # Vulkan optimizations for RDNA 4
+
 vulkan-async-compute=yes
 vulkan-async-transfer=yes
 vulkan-queue-count=8
 #vulkan-present-mode=fifo # For use with hwdec=vulkan
-#vulkan-present-mode="fifo" # use this if normal fifo fails. Use with hwdec=vulkan
+#vulkan-present-mode="fifo" # Use this if normal fifo fails. Use with hwdec=vulkan
 spirv-compiler=auto
 swapchain-depth=8
 vd-lavc-dr=yes
 vd-lavc-threads=0 # Match Ryzen 9 9950X3D cores or your cpu. 0 = auto
 #vd-lavc-film-grain=gpu # GPU-accelerated grain for HDR
 
-# Wayland tweaks
+
+###########
+# Wayland #
+###########
+
+# Wayland tweaks DISABLE ALL IF YOU USE X11
+
+gpu-context=waylandvk
 wayland-app-id=mpv
+#vo=dmabuf-wayland
 #vo-wayland-blur-scale=yes
+
+
+#########
+# Cache #
+#########
 
 # Cache for 4K/HDR
 cache=yes
@@ -53,9 +72,9 @@ demuxer-max-bytes=1G
 demuxer-readahead-secs=60
          
 
-##############
+############
 # UI + OSD #
-##############
+############
 
 osc=no
 fs=yes
@@ -192,7 +211,8 @@ cscale-antiring=0.7 # chroma upscale deringing; maybe currently does nothing wit
 # Audio and Subtitles #
 #######################
 
-ao=pipewire
+ao=pipewire # Highest quality least compatible (doesn't work with streaming applications like discord)
+#ao=pulse # Most compatible, slightly lower quality compared to pipewire, works well with discord
 volume-max=150
 #audio-sync=yes
 audio-channels=auto
@@ -256,6 +276,10 @@ profile=protocol.http
 
 [protocol.ytdl]
 profile=protocol.http
+
+
+# Notes - If playback is sped up disable display-fps-override=60 by putting a # infront of it. Example: #display-fps-override=60
+
 
 # Created by - KAORU-VII
 # Social Media: https://kimurasocial.com
