--- a/mpv.conf
+++ b/mpv.conf
@@ -22,9 +22,9 @@ include="~~/profiles.conf"
 vo=gpu-next
 gpu-api=vulkan
 
-#hwdec=vulkan # Best for quality and performance, least compatible
+hwdec=vulkan # Best for quality and performance, least compatible
 #hwdec=vaapi # More compatible than vulkan but slightly lower quality
-hwdec=vaapi-copy # Most compatible with older GPUs, lowest quality
+#hwdec=vaapi-copy # Most compatible with older GPUs, lowest quality
 
 
 profile=gpu-hq
